[gd_scene load_steps=7 format=3 uid="uid://bx6xktdprrgp8"]

[ext_resource type="Texture2D" uid="uid://botjememttolq" path="res://Sprites/Environment/medievalEnvironment_04.png" id="1_1p848"]
[ext_resource type="Script" path="res://Scenes/Tree/tree.gd" id="1_gdor6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7403"]
size = Vector2(8, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_81oy6"]
radius = 22.0227

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fom3h"]
bg_color = Color(0.466667, 0.466667, 0.466667, 0.478431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggkkg"]
bg_color = Color(0.870588, 0.486275, 0.141176, 1)

[node name="Tree" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_gdor6")

[node name="PineSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -5)
texture = ExtResource("1_1p848")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_v7403")

[node name="ChopArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChopArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_81oy6")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -17.0
offset_top = -34.0
offset_right = 18.0
offset_bottom = -29.0
theme_override_styles/background = SubResource("StyleBoxFlat_fom3h")
theme_override_styles/fill = SubResource("StyleBoxFlat_ggkkg")
rounded = true
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="ChopArea" to="." method="_on_chop_area_body_entered"]
[connection signal="body_exited" from="ChopArea" to="." method="_on_chop_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
